k8s/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rank-service
  labels:
    app: rank-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rank-service
  template:
    metadata:
      labels:
        app: rank-service
    spec:
      containers:
        - name: rank-service
          image: RANK_IMAGE
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: '64Mi'
              cpu: '100m'
            limits:
              memory: '128Mi'
              cpu: '250m'
      restartPolicy: Always
