k8s/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rank-service
spec:
  selector:
    app: rank-service
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
  type: LoadBalancer
