k8s/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: my-app.local
      http:
        paths:
          - path: /rank-service
            pathType: Prefix
            backend:
              service:
                name: rank-service
                port:
                  number: 3001
